--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,9 +1,14 @@
 
-
-  <section class="grid-item">
-    <a href="/">
-      <%= image_tag "#{recipe.image}", class: "image"%>
-      <div class="category"><%= recipe.name %></div>
-      <p class="descripsion"><%= simple_format(recipe.detail) %></p> 
+  <div class="card">
+    <a>
+      <%= image_tag "#{recipe.image}", class: "card-img-top"%>
+      <div class="card-body">
+        <p class="category"><%= recipe.name %></p>
+        <p class="descripsion"><%= simple_format(recipe.detail) %></p> 
+        <%= link_to "レシピ詳細を見る", "/recipes/#{recipe.id}"%>
+      </div>
     </a>
-  </section>
+  </div>
+
+
+
