--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,33 +1,66 @@
 <div class="new-recipe">
   <div class="new-recipe__header">
-    ヘッダーだよ
+    
   </div>
-  <div class="wrapper">
-    <div class="new-recipe__form">
-      <%= form_for @recipe do |f| %>
-        <div class="new-recipe__form__name">
-          <%= f.label "レシピ名を入力"%><br>
-          <%= f.text_field :name, placeholder: "レシピ名", size: "60", class: "textline" %>
-        </div>
-        <div class="new-recipe__form__wrapper">
-          <div class="new-recipe__form__image">
-            <%= f.label "レシピの写真を投稿"%><br>
-            <%= f.file_field :image %>
-          </div>
-          <div class="new-recipe__form__detail">
-            <%= f.label "レシピ詳細を入力"%><br>
-            <%= f.text_area :detail, placeholder: "レシピ詳細", size: "60x10" %>
-          </div>
 
+  <div class="wrapper">
+    <div class="side">
+      <div class="sidebar">
+        <div class="category">
+          <div class="category__name">
+          <% if user_signed_in? %>
+          <div class="list-group-item" id="current-name">
+            <%= current_user.name %>
+          </div>
+          <% end %>
+          <%= link_to "トップページ", root_path, class:"list-group-item" %>
+          <% if user_signed_in? %>
+          <%= link_to "レシピ投稿", new_recipe_path, class:"list-group-item" %>
+          <%= link_to "サインアウト", destroy_user_session_path, method: :delete, class:"list-group-item"  %>
+          
+          <% else %>
+          <%= link_to "新規登録", new_user_registration_path, class:"list-group-item"  %>
+          <%= link_to "サインイン", new_user_session_path, class:"list-group-item"  %>          
+          <% end %>
+          </div>
         </div>
-        <div class="new-recipe__form__material">
-          <%= f.label "材料を入力"%><br>
-          <%= f.text_area :material, placeholder: "材料", size: "60x10" %>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="contents">
+      <div class="container">
+        <p class="new-howto__recipe-name">レシピ作成</p>
+        <div class="new-recipe__form">
+          <%= form_for @recipe do |f| %>
+            <div class="new-recipe__form__name">
+              <%= f.label "レシピ名を入力"%><br>
+              <%= f.text_field :name, placeholder: "レシピ名", size: "60", class: "textline" %>
+            </div>
+            <div class="new-recipe__form__wrapper">
+              <div class="new-recipe__form__image">
+                <%= f.label "レシピの写真を投稿"%><br>
+                <%= f.file_field :image %>
+              </div>
+              <div class="new-recipe__form__detail">
+                <%= f.label "レシピ詳細を入力"%><br>
+                <%= f.text_area :detail, placeholder: "レシピ詳細", size: "60x10" %>
+              </div>
+
+            </div>
+            <div class="new-recipe__form__material">
+              <%= f.label "材料を入力"%><br>
+              <%= f.text_area :material, placeholder: "材料", size: "60x10" %>
+            </div>
+            <div class="new-recipe__form__submit">
+              <%= f.submit value: "保存して作り方の入力に進む"%>
+            </div>
+          <% end %>
         </div>
-        <div class="new-recipe__form__submit">
-          <%= f.submit value: "保存して作り方の入力に進む"%>
-        </div>
-      <% end %>
+      </div>
+      </div>
     </div>
   </div>
+
+
 </div>
