--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -45,43 +45,14 @@
         </div>
         
         <p>レシピの作り方</p>
-
         <ol class="howtos" id="howtos">
-
-          <%= render @howtos %>
-
+        <% @howtos.each do |howto| %>
+          <li><%= howto.content %></li>
+        <% end %>
         </ol>
-
-        <div class="new-howto__forms">
-          <div class="new-howto__form">
-
-            <button id="open-modal">作り方を追加</button>
-            <div class="overlay" id="overlay">
-              <div class="modal-window" id="modal-window">
-                <p>作り方を入力</p>
-                <%= form_for [@recipe, @howto] do |f| %>
-                  <%= f.text_area :content %><br>
-                  <%= f.submit id: "send" %>
-                  <%# <button id="close-modal" type="submit">保存</button> %>
-
-                <%end%>
-              </div>
-            </div>
-
-            <div class="overlay" id="overlay-edit">
-              <div class="modal-window" id="modal-edit">
-                <p>作り方を編集</p>
-                <%= form_for [@recipe, @howto], url: "/recipes/#{@recipe.id}/howtos/#{@howto.id}/", method: :patch do |f|%>
-                  <%= f.text_area :content %><br>
-                  <%= f.submit id: "send-edit" %>
-                  <%# <button id="close-modal" type="submit">保存</button> %>
-                <%end%>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
       </div>
     </div>
   </div>
+
 </div>
