--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,11 +1,10 @@
 
   <div class="card">
-    <a>
+    <a class="rakuten" href="/recipes/<%= recipe.id %>">
       <%= image_tag "#{recipe.image}", class: "card-img-top"%>
       <div class="card-body">
         <p class="category"><%= recipe.name %></p>
         <p class="descripsion"><%= simple_format(recipe.detail) %></p> 
-        <%= link_to "レシピ詳細を見る", "/recipes/#{recipe.id}"%>
       </div>
     </a>
   </div>
