--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,5 @@
 @import "./new-recipe";
 @import "./howtos";
 @import "./recipes";
-// @import "./products";
+@import "./products";
 @import "bootstrap"; 
