--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -125,6 +125,7 @@
 .card > a:hover{
   box-shadow: 0 0 6px -1px rgba(0, 0, 0, 0.3);
   opacity: 0.8;
+  text-decoration: none;
 }
 
 .list-group-item{
@@ -135,9 +136,11 @@
 .list-group-item:hover{
   background: #ff9f43;
   color: #fff;
+  text-decoration: none;
 }
 
 #current-name{
   background: #ff9f43;
   color: #fff;
 }
+
