--- a/app/views/howtos/_howto.html.erb
+++ b/app/views/howtos/_howto.html.erb
@@ -1,4 +1,7 @@
 <li data-id="<%= howto.id %>">
   <%= simple_format(howto.content) %>
+
+
+  <%= fa_icon("trash", id:"delete-howto") %>
   <%# <a class="open-edit" id="open-edit">編集</a> %>
 </li>
