--- a/app/assets/stylesheets/howtos.scss
+++ b/app/assets/stylesheets/howtos.scss
@@ -70,7 +70,7 @@ ol li {
   position: relative;
   padding-left: 30px;
   line-height: 1.5em;
-  padding: 0.5em 0.5em 0.5em 30px;
+  padding: 0.5em 0.5em 0 30px;
   border-bottom: dashed 1px #ff9f43;
 }
 
@@ -116,9 +116,15 @@ textarea  {
   line-height: 1.2;      
 }
 
-ol li a{
+ol li i{
   position: absolute;
   bottom: 0;
   right: 0;
   padding-bottom: 0.5em;
+}
+
+#delete-howto{
+  font-size: 1.3rem;
+  color: #ff9f43;
+  cursor: pointer;
 }
